--- a/en/gallery.ipynb
+++ b/en/gallery.ipynb
@@ -17,7 +17,7 @@
     ]
    },
    "source": [
-    "## This is a thumbnail gallery:\n",
+    "## This is a thumbnail gallery\n",
     "\n",
     "* [examples/example01](examples/example01.ipynb)\n",
     "* [examples/example02](examples/example02.ipynb)\n",
@@ -26,6 +26,13 @@
     "* [examples/example05](examples/example05.ipynb)\n",
     "* [examples/example06](examples/example06.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
