Update the thumbnail size

--- a/en/gallery.ipynb
+++ b/en/gallery.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gallery\n",
-    "\n",
-    "Here is a gallery:"
+    "# Gallery"
    ]
   },
   {
@@ -17,8 +15,6 @@
     ]
    },
    "source": [
-    "## This is a thumbnail gallery\n",
-    "\n",
     "* [examples/example01](examples/example01.ipynb)\n",
     "* [examples/example02](examples/example02.ipynb)\n",
     "* [examples/example03](examples/example03.ipynb)\n",
@@ -26,13 +22,6 @@
     "* [examples/example05](examples/example05.ipynb)\n",
     "* [examples/example06](examples/example06.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
