--- a/en/examples/example03.ipynb
+++ b/en/examples/example03.ipynb
@@ -167,7 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -188,6 +192,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
