Add more thumbnails

--- a/en/gallery.ipynb
+++ b/en/gallery.ipynb
@@ -20,7 +20,15 @@
     "* [examples/example03](examples/example03.ipynb)\n",
     "* [examples/example04](examples/example04.ipynb)\n",
     "* [examples/example05](examples/example05.ipynb)\n",
-    "* [examples/example06](examples/example06.ipynb)"
+    "* [examples/example06](examples/example06.ipynb)\n",
+    "* [examples/example07](examples/example07.ipynb)\n",
+    "* [examples/example08](examples/example08.ipynb)\n",
+    "* [examples/example09](examples/example09.ipynb)\n",
+    "* [examples/example10](examples/example10.ipynb)\n",
+    "* [examples/example11](examples/example11.ipynb)\n",
+    "* [examples/example12](examples/example12.ipynb)\n",
+    "* [examples/example13](examples/example13.ipynb)\n",
+    "* [examples/example14](examples/example14.ipynb)"
    ]
   }
  ],
