--- a/en/tests/Reversible_Diffusion_limited.ipynb
+++ b/en/tests/Reversible_Diffusion_limited.ipynb
@@ -202,7 +202,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -224,6 +228,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
