--- a/en/gallery.ipynb
+++ b/en/gallery.ipynb
@@ -15,6 +15,8 @@
     ]
    },
    "source": [
+    "## Examples\n",
+    "\n",
     "* [examples/example01](examples/example01.ipynb)\n",
     "* [examples/example02](examples/example02.ipynb)\n",
     "* [examples/example03](examples/example03.ipynb)\n",
@@ -29,6 +31,19 @@
     "* [examples/example12](examples/example12.ipynb)\n",
     "* [examples/example13](examples/example13.ipynb)\n",
     "* [examples/example14](examples/example14.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests\n",
+    "\n",
+    "- [tests/Birth_Death](tests/Birth_Death.ipynb)\n",
+    "- [tests/Homodimerization_and_Annihilation](tests/Homodimerization_and_Annihilation.ipynb)\n",
+    "- [tests/MSD](tests/MSD.ipynb)\n",
+    "- [tests/Reversible](tests/Reversible.ipynb)\n",
+    "- [tests/Reversible_Diffusion_limited](tests/Reversible_Diffusion_limited.ipynb)"
    ]
   }
  ],
