--- a/en/tests/Homodimerization_and_Annihilation.ipynb
+++ b/en/tests/Homodimerization_and_Annihilation.ipynb
@@ -258,7 +258,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-thumbnail"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -280,6 +284,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
