Oops. Don't forget to add a tag

--- a/en/gallery.ipynb
+++ b/en/gallery.ipynb
@@ -35,7 +35,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
    "source": [
     "## Tests\n",
     "\n",
